--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "build:autoprefixer": "autoprefixer-cli css/style.css",
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
     "watch": "npm-run-all build -p watch:*",
-    "watch:sass": "node-sass --output-style expanded --source-map true -o css sass --watch",
-    "watch:autoprefixer": "onchange -d 100 css/style.css -- autoprefixer-cli -o css/style.prefixed.css css/style.css",
+    "watch:sassprefixer": "onchange sass/*.scss -- npm-run-all watch1:*",
+    "watch1:sass": "node-sass --output-style expanded --source-map true -o css sass",
+    "watch1:autoprefixer": "onchange -d 100 css/style.css -- autoprefixer-cli -o css/style.prefixed.css css/style.css",
     "watch:browsersync": "browser-sync start --server --files css/*.css *.html"
   },
   "repository": {
